--- a/android/skin/qt/extended.ui
+++ b/android/skin/qt/extended.ui
@@ -61,443 +61,13 @@ font-family: &quot;Roboto&quot;</string>
     <enum>Qt::LeftToRight</enum>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>4</number>
    </property>
    <widget class="LocationPage" name="location_page"/>
    <widget class="CellularPage" name="cellular_page"/>
    <widget class="BatteryPage" name="batteryPage"/>
    <widget class="TelephonyPage" name="telephonyPage"/>
-   <widget class="QWidget" name="virtualSensorsPage">
-    <widget class="QTabWidget" name="tabWidget">
-     <property name="geometry">
-      <rect>
-       <x>-1</x>
-       <y>40</y>
-       <width>580</width>
-       <height>491</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-     <property name="currentIndex">
-      <number>1</number>
-     </property>
-     <widget class="QWidget" name="tab">
-      <attribute name="title">
-       <string>Accelerometer</string>
-      </attribute>
-      <widget class="EditableSliderWidget" name="yawAngleWidget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>50</y>
-         <width>331</width>
-         <height>80</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>30</y>
-         <width>59</width>
-         <height>15</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Yaw</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_2">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>140</y>
-         <width>59</width>
-         <height>15</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Pitch</string>
-       </property>
-      </widget>
-      <widget class="EditableSliderWidget" name="pitchAngleWidget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>160</y>
-         <width>331</width>
-         <height>80</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_3">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>260</y>
-         <width>59</width>
-         <height>15</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Roll</string>
-       </property>
-      </widget>
-      <widget class="EditableSliderWidget" name="rollAngleWidget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>280</y>
-         <width>331</width>
-         <height>80</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_6">
-       <property name="geometry">
-        <rect>
-         <x>210</x>
-         <y>390</y>
-         <width>250</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Resulting accelerometer values (m/s²):</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_8">
-       <property name="geometry">
-        <rect>
-         <x>210</x>
-         <y>420</y>
-         <width>250</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Resulting magnetometer values (μT):</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-      <widget class="QLabel" name="accelerometerXLabel">
-       <property name="geometry">
-        <rect>
-         <x>470</x>
-         <y>390</y>
-         <width>60</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-      <widget class="QLabel" name="accelerometerYLabel">
-       <property name="geometry">
-        <rect>
-         <x>540</x>
-         <y>390</y>
-         <width>60</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-      <widget class="QLabel" name="accelerometerZLabel">
-       <property name="geometry">
-        <rect>
-         <x>610</x>
-         <y>390</y>
-         <width>60</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-      <widget class="QLabel" name="magnetometerNorthLabel">
-       <property name="geometry">
-        <rect>
-         <x>470</x>
-         <y>420</y>
-         <width>60</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-      <widget class="QLabel" name="magnetometerEastLabel">
-       <property name="geometry">
-        <rect>
-         <x>540</x>
-         <y>420</y>
-         <width>60</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-      <widget class="QLabel" name="magnetometerVerticalLabel">
-       <property name="geometry">
-        <rect>
-         <x>610</x>
-         <y>420</y>
-         <width>60</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string/>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-     </widget>
-     <widget class="QWidget" name="tab_2">
-      <attribute name="title">
-       <string>Additional sensors</string>
-      </attribute>
-      <widget class="QLabel" name="label_4">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>30</y>
-         <width>170</width>
-         <height>15</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Ambient temperature (°C)</string>
-       </property>
-      </widget>
-      <widget class="EditableSliderWidget" name="temperatureSensorValueWidget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>50</y>
-         <width>320</width>
-         <height>80</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_5">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>140</y>
-         <width>90</width>
-         <height>15</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Proximity (cm)</string>
-       </property>
-      </widget>
-      <widget class="EditableSliderWidget" name="proximitySensorValueWidget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>0</x>
-         <y>160</y>
-         <width>320</width>
-         <height>80</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_7">
-       <property name="geometry">
-        <rect>
-         <x>350</x>
-         <y>30</y>
-         <width>170</width>
-         <height>15</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Magnetic field (μT)</string>
-       </property>
-      </widget>
-      <widget class="QWidget" name="horizontalLayoutWidget">
-       <property name="geometry">
-        <rect>
-         <x>350</x>
-         <y>50</y>
-         <width>220</width>
-         <height>40</height>
-        </rect>
-       </property>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <property name="topMargin">
-         <number>4</number>
-        </property>
-        <item>
-         <widget class="QLineEdit" name="magNorthWidget">
-          <property name="font">
-           <font>
-            <family>Roboto</family>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true"/>
-          </property>
-          <property name="text">
-           <string>22.0</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-          <property name="class" stdset="0">
-           <string>EditableValue</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="magEastWidget">
-          <property name="font">
-           <font>
-            <family>Roboto</family>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true"/>
-          </property>
-          <property name="text">
-           <string>5.9</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-          <property name="class" stdset="0">
-           <string>EditableValue</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="magVerticalWidget">
-          <property name="font">
-           <font>
-            <family>Roboto</family>
-           </font>
-          </property>
-          <property name="styleSheet">
-           <string notr="true"/>
-          </property>
-          <property name="text">
-           <string>43.1</string>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-          </property>
-          <property name="class" stdset="0">
-           <string>EditableValue</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </widget>
-      <widget class="EditableSliderWidget" name="lightSensorValueWidget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>350</x>
-         <y>60</y>
-         <width>320</width>
-         <height>80</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_9">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>40</y>
-         <width>170</width>
-         <height>15</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Light (lux)</string>
-       </property>
-      </widget>
-      <widget class="EditableSliderWidget" name="pressureSensorValueWidget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>280</y>
-         <width>320</width>
-         <height>80</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_10">
-       <property name="geometry">
-        <rect>
-         <x>20</x>
-         <y>260</y>
-         <width>170</width>
-         <height>15</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Pressure (hPa)</string>
-       </property>
-      </widget>
-      <widget class="EditableSliderWidget" name="humiditySensorValueWidget" native="true">
-       <property name="geometry">
-        <rect>
-         <x>350</x>
-         <y>280</y>
-         <width>320</width>
-         <height>80</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_11">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>260</y>
-         <width>170</width>
-         <height>15</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Relative humidity (%)</string>
-       </property>
-      </widget>
-     </widget>
-    </widget>
-   </widget>
+   <widget class="VirtualSensorsPage" name="virtualSensorsPage"/>
    <widget class="DPadPage" name="dpadPage"/>
    <widget class="FingerPage" name="finger_page"/>
    <widget class="SettingsPage" name="settingsPage"/>
@@ -1178,12 +748,6 @@ font-family: &quot;Roboto&quot;</string>
  </widget>
  <customwidgets>
   <customwidget>
-   <class>EditableSliderWidget</class>
-   <extends>QWidget</extends>
-   <header>android/skin/qt/editable-slider-widget.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
    <class>CellularPage</class>
    <extends>QWidget</extends>
    <header>android/skin/qt/extended-pages/cellular-page.h</header>
@@ -1231,6 +795,12 @@ font-family: &quot;Roboto&quot;</string>
    <header>android/skin/qt/extended-pages/location-page.h</header>
    <container>1</container>
   </customwidget>
+  <customwidget>
+   <class>VirtualSensorsPage</class>
+   <extends>QWidget</extends>
+   <header>android/skin/qt/extended-pages/virtual-sensors-page.h</header>
+   <container>1</container>
+  </customwidget>
  </customwidgets>
  <tabstops>
   <tabstop>locationButton</tabstop>
@@ -1243,10 +813,6 @@ font-family: &quot;Roboto&quot;</string>
   <tabstop>helpButton</tabstop>
   <tabstop>spacer2Button</tabstop>
   <tabstop>spacer1Button</tabstop>
-  <tabstop>tabWidget</tabstop>
-  <tabstop>magNorthWidget</tabstop>
-  <tabstop>magEastWidget</tabstop>
-  <tabstop>magVerticalWidget</tabstop>
  </tabstops>
  <resources>
   <include location="resources.qrc"/>
