ui: Make the multitouch UI prettier.
Makes the following visual changes:
1. Turns on antialiasing for the painter drawing the multitouch dots.
2. Adds assets for the dots, including some logic for high DPR
screens like Retina.
3. Enables mouse tracking on the overlay frame so that the dots
follow your mouse when not clicked.

Change-Id: I1402c15bdced82b44cf5a0d66a9e3e92e4969ca7

--- a/android/skin/qt/resources.qrc
+++ b/android/skin/qt/resources.qrc
@@ -182,4 +182,11 @@
  <qresource prefix="/cursor">
      <file alias="zoom_cursor">images/cursor/zoom_cursor.svg</file>
  </qresource>
+
+ <qresource prefix="/multitouch">
+     <file alias="touch_point">images/multitouch/touch_point.png</file>
+     <file alias="touch_point_2x">images/multitouch/touch_point_2x.png</file>
+     <file alias="center_point">images/multitouch/center_point.png</file>
+     <file alias="center_point_2x">images/multitouch/center_point_2x.png</file>
+ </qresource>
 </RCC>
