ui: Adjust button boundaries
Align the button text with its near by elements.
Center the text in the button.

We are using "flat" buttons. Their boundaries are visible only
when they are clicked. The Material Design guidelines for flat
buttons indicate that they should be placed so their text is
aligned with near-by items, and that the text should be centered
in the button.

One result of this is that, when a button is pushed and its boundary
becomes visible, the boundary is not aligned with nearby items.
Still, the guideline indicates this is the best option.

Change-Id: I84fc3c2f49362fd494942ed2c58547e606eb822a

--- a/android/skin/qt/extended-pages/finger-page.ui
+++ b/android/skin/qt/extended-pages/finger-page.ui
@@ -16,9 +16,9 @@
   <widget class="QPushButton" name="finger_touchButton">
    <property name="geometry">
     <rect>
-     <x>180</x>
+     <x>188</x>
      <y>70</y>
-     <width>120</width>
+     <width>132</width>
      <height>36</height>
     </rect>
    </property>
@@ -29,9 +29,6 @@
      <weight>75</weight>
      <bold>true</bold>
     </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">text-align: right</string>
    </property>
    <property name="text">
     <string>TOUCH SENSOR</string>
@@ -88,6 +85,10 @@
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>finger_pickBox</tabstop>
+  <tabstop>finger_touchButton</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
