--- a/android/skin/qt/extended-pages/location-page.ui
+++ b/android/skin/qt/extended-pages/location-page.ui
@@ -78,9 +78,9 @@
   <widget class="QPushButton" name="loc_sendPointButton">
    <property name="geometry">
     <rect>
-     <x>550</x>
+     <x>554</x>
      <y>220</y>
-     <width>54</width>
+     <width>66</width>
      <height>36</height>
     </rect>
    </property>
@@ -91,9 +91,6 @@
      <weight>75</weight>
      <bold>true</bold>
     </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">text-align: right</string>
    </property>
    <property name="text">
     <string>SEND</string>
@@ -124,7 +121,7 @@
   <widget class="QPushButton" name="loc_playStopButton">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>6</x>
      <y>550</y>
      <width>36</width>
      <height>36</height>
@@ -172,9 +169,9 @@
   <widget class="QPushButton" name="loc_GpxKmlButton">
    <property name="geometry">
     <rect>
-     <x>500</x>
+     <x>496</x>
      <y>550</y>
-     <width>104</width>
+     <width>124</width>
      <height>36</height>
     </rect>
    </property>
@@ -185,9 +182,6 @@
      <weight>75</weight>
      <bold>true</bold>
     </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">text-align: right</string>
    </property>
    <property name="text">
     <string>LOAD GPX/KML</string>
@@ -325,7 +319,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignTrailing|AlignVCenter</set>
+     <set>AlignRight|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -340,7 +334,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignTrailing|AlignVCenter</set>
+     <set>AlignRight|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -355,7 +349,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignTrailing|AlignVCenter</set>
+     <set>AlignRight|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -370,7 +364,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignTrailing|AlignVCenter</set>
+     <set>AlignRight|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -385,7 +379,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignTrailing|AlignVCenter</set>
+     <set>AlignRight|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -400,7 +394,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignTrailing|AlignVCenter</set>
+     <set>AlignRight|AlignVCenter</set>
     </property>
    </column>
   </widget>
@@ -475,6 +469,16 @@
    <container>1</container>
   </customwidget>
  </customwidgets>
+ <tabstops>
+  <tabstop>loc_decimalModeSwitch</tabstop>
+  <tabstop>loc_sexagesimalModeSwitch</tabstop>
+  <tabstop>loc_altitudeInput</tabstop>
+  <tabstop>loc_sendPointButton</tabstop>
+  <tabstop>loc_pathTable</tabstop>
+  <tabstop>loc_playStopButton</tabstop>
+  <tabstop>loc_playbackSpeed</tabstop>
+  <tabstop>loc_GpxKmlButton</tabstop>
+ </tabstops>
  <resources>
   <include location="../resources.qrc"/>
  </resources>
