[ui] Change "SDK Location" to "Backup ADB".
The SDK location setting is only used to find ADB, and setting it
improperly can break some emulator functionality (screenshot, APK
install, file copy).

Split this setting into two:
1. "Auto-detect ADB" - the emulator will find ADB on it's own.
2. "Custom ADB Path" - if the above is off, let the user direct the
emulator to an ADB executable (needed for those who use the emulator
as a standalone and only download the tools/).

Also, warn the user if we can't auto-find ADB.

Change-Id: I5d8223df573cf696509b7bd8b87a9546f7f110e5

--- a/android/skin/qt/extended-pages/settings-page.ui
+++ b/android/skin/qt/extended-pages/settings-page.ui
@@ -48,9 +48,9 @@
     <property name="text">
      <string>Ask</string>
     </property>
-   <property name="checked">
-    <bool>false</bool>
-   </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QRadioButton" name="set_crashReportPrefAlways">
     <property name="geometry">
@@ -64,9 +64,9 @@
     <property name="text">
      <string>Always</string>
     </property>
-   <property name="checked">
-    <bool>false</bool>
-   </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
    </widget>
    <widget class="QRadioButton" name="set_crashReportPrefNever">
     <property name="geometry">
@@ -80,9 +80,9 @@
     <property name="text">
      <string>Never</string>
     </property>
-   <property name="checked">
-    <bool>false</bool>
-   </property>
+    <property name="checked">
+     <bool>false</bool>
+    </property>
    </widget>
   </widget>
   <widget class="QCheckBox" name="set_onTop">
@@ -107,15 +107,15 @@
     <string>Toggle</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="set_sdkPathBox">
+  <widget class="QLineEdit" name="set_adbPathBox">
    <property name="enabled">
     <bool>true</bool>
    </property>
    <property name="geometry">
     <rect>
-     <x>324</x>
+     <x>370</x>
      <y>112</y>
-     <width>240</width>
+     <width>191</width>
      <height>31</height>
     </rect>
    </property>
@@ -204,30 +204,6 @@
     <string notr="true">folder</string>
    </property>
   </widget>
-  <widget class="QGroupBox" name="sdkPathTitle">
-   <property name="geometry">
-    <rect>
-     <x>324</x>
-     <y>94</y>
-     <width>211</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Roboto</family>
-    </font>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border: 0px;</string>
-   </property>
-   <property name="title">
-    <string>Android SDK path</string>
-   </property>
-   <property name="ColorGroup" stdset="0">
-    <string>Title</string>
-   </property>
-  </widget>
   <widget class="QCheckBox" name="set_allowKeyboardGrab">
    <property name="geometry">
     <rect>
@@ -245,6 +221,28 @@
    </property>
    <property name="checked">
     <bool>false</bool>
+   </property>
+   <property name="ColorGroup" stdset="0">
+    <string>Toggle</string>
+   </property>
+  </widget>
+  <widget class="QCheckBox" name="set_autoFindAdb">
+   <property name="geometry">
+    <rect>
+     <x>324</x>
+     <y>112</y>
+     <width>41</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>24</width>
+     <height>24</height>
+    </size>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
    </property>
    <property name="ColorGroup" stdset="0">
     <string>Toggle</string>
@@ -327,7 +325,7 @@
     </property>
    </item>
   </widget>
-  <widget class="QPushButton" name="set_sdkPathButton">
+  <widget class="QPushButton" name="set_adbPathButton">
    <property name="geometry">
     <rect>
      <x>572</x>
@@ -356,7 +354,7 @@
     <string notr="true">folder</string>
    </property>
   </widget>
-  <widget class="QGroupBox" name="themeTitle_2">
+  <widget class="QGroupBox" name="mouseFocusTitle">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -375,6 +373,30 @@
    </property>
    <property name="title">
     <string>Grab screen focus with mouse</string>
+   </property>
+   <property name="ColorGroup" stdset="0">
+    <string>Title</string>
+   </property>
+  </widget>
+  <widget class="QGroupBox" name="autoFindAdbTitle">
+   <property name="geometry">
+    <rect>
+     <x>324</x>
+     <y>94</y>
+     <width>251</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Roboto</family>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border: 0px;</string>
+   </property>
+   <property name="title">
+    <string>Use detected ADB location</string>
    </property>
    <property name="ColorGroup" stdset="0">
     <string>Title</string>
