--- a/android/skin/qt/extended-pages/settings-page.ui
+++ b/android/skin/qt/extended-pages/settings-page.ui
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>168</y>
-     <width>211</width>
-     <height>101</height>
+     <y>210</y>
+     <width>281</width>
+     <height>71</height>
     </rect>
    </property>
    <property name="font">
@@ -31,65 +31,17 @@
     <string notr="true">border: 0px;</string>
    </property>
    <property name="title">
-    <string>Send crash reports?</string>
+    <string>When to send crash reports</string>
    </property>
    <property name="ColorGroup" stdset="0">
     <string>Title</string>
    </property>
-   <widget class="QRadioButton" name="set_crashReportPrefAsk">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>68</y>
-      <width>102</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Ask</string>
-    </property>
-    <property name="checked">
-     <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="set_crashReportPrefAlways">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>20</y>
-      <width>102</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Always</string>
-    </property>
-    <property name="checked">
-     <bool>false</bool>
-    </property>
-   </widget>
-   <widget class="QRadioButton" name="set_crashReportPrefNever">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>44</y>
-      <width>102</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Never</string>
-    </property>
-    <property name="checked">
-     <bool>false</bool>
-    </property>
-   </widget>
   </widget>
   <widget class="QCheckBox" name="set_onTop">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>306</y>
+     <y>170</y>
      <width>211</width>
      <height>24</height>
     </rect>
@@ -252,7 +204,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>288</y>
+     <y>152</y>
      <width>211</width>
      <height>21</height>
     </rect>
@@ -402,18 +354,50 @@
     <string>Title</string>
    </property>
   </widget>
+  <widget class="QComboBox" name="set_crashReportPrefComboBox">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>230</y>
+     <width>280</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Roboto</family>
+     <pointsize>10</pointsize>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">padding: 3px 3px 3px 3px;</string>
+   </property>
+   <property name="maxVisibleItems">
+    <number>3</number>
+   </property>
+   <item>
+    <property name="text">
+     <string>Always</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Never</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>Ask</string>
+    </property>
+   </item>
+  </widget>
  </widget>
  <tabstops>
   <tabstop>set_themeBox</tabstop>
   <tabstop>set_allowKeyboardGrab</tabstop>
-  <tabstop>set_crashReportPrefAlways</tabstop>
-  <tabstop>set_crashReportPrefNever</tabstop>
-  <tabstop>set_crashReportPrefAsk</tabstop>
   <tabstop>set_onTop</tabstop>
   <tabstop>set_saveLocBox</tabstop>
   <tabstop>set_saveLocFolderButton</tabstop>
-  <tabstop>set_sdkPathBox</tabstop>
-  <tabstop>set_sdkPathButton</tabstop>
  </tabstops>
  <resources>
   <include location="../resources.qrc"/>
