[UI] Make emulator usable on high-DPI Windows displays
This is a workaround for displaying properly on Windows with
high-density displays. Without it, the UI is not just ugly,
but actually unusable.

This workaround can handle mixed-density setups (low-density
monitor connected to a high-density laptop) and all the widgets
are adjusted properly when moved between monitors.

It is my understanding that this will not be needed in a
future version of Qt (5.6), but it hasn't been released at
the time of this writing.

Change-Id: Ife43f47995e3d3dea39d756e234981bda2d2a717

--- a/android/skin/qt/extended-pages/location-page.ui
+++ b/android/skin/qt/extended-pages/location-page.ui
@@ -300,6 +300,9 @@
    <property name="columnCount">
     <number>6</number>
    </property>
+   <attribute name="horizontalHeaderCascadingSectionResizes">
+    <bool>true</bool>
+   </attribute>
    <attribute name="horizontalHeaderStretchLastSection">
     <bool>true</bool>
    </attribute>
@@ -319,7 +322,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignRight|AlignVCenter</set>
+     <set>AlignTrailing|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -334,7 +337,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignRight|AlignVCenter</set>
+     <set>AlignTrailing|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -349,7 +352,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignRight|AlignVCenter</set>
+     <set>AlignTrailing|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -364,7 +367,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignRight|AlignVCenter</set>
+     <set>AlignTrailing|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -379,7 +382,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignRight|AlignVCenter</set>
+     <set>AlignTrailing|AlignVCenter</set>
     </property>
    </column>
    <column>
@@ -394,7 +397,7 @@
      </font>
     </property>
     <property name="textAlignment">
-     <set>AlignRight|AlignVCenter</set>
+     <set>AlignTrailing|AlignVCenter</set>
     </property>
    </column>
   </widget>
