--- a/android/skin/qt/styles/stylesheet_template.css
+++ b/android/skin/qt/styles/stylesheet_template.css
@@ -46,11 +46,11 @@ QPlainTextEdit, QTextEdit, QLineEdit {
 }
 QCheckBox::indicator:checked[ColorGroup="Toggle"] {
     image: url(:/%%PATH%%/toggle_on);
-    width: 36px; height: 24px;
+    width: 36; height: 24;
 }
 QCheckBox::indicator:unchecked[ColorGroup="Toggle"] {
     image: url(:/%%PATH%%/toggle_off);
-    width: 36px; height: 24px;
+    width: 36; height: 24;
 }
 QCheckBox::indicator:checked {
     image: url(:/%%PATH%%/check_yes)
@@ -60,7 +60,7 @@ QCheckBox::indicator:unchecked {
 }
 QRadioButton::indicator:unchecked {
     image: url(:/%%PATH%%/radio_off);
-    width: 24; height:24;
+    width: 24; height: 24;
 }
 QRadioButton::indicator:checked {
     image: url(:/%%PATH%%/radio_on);
@@ -121,8 +121,8 @@ QComboBox::drop-down { border-left-style: solid; }
 QComboBox::down-arrow {
     image:url(:/%%PATH%%/drop_down);
     border: none;
-    width: 24px;
-    height: 24px;
+    width: 24;
+    height: 24;
 }
 QListView { min-height: 4em }
 QTabWidget::pane {border: none;}
@@ -145,4 +145,3 @@ QTabBar::tab:disabled {
     color: transparent;
     border-bottom: 2px solid transparent
 }
-
