[UI] Fix button ugliness
This change adds special styling for buttons in the UI for when a
button is pressed. Without it, buttons had a jarring "blocky" appearance
when pressed (on OS X and Windows at least).

The push buttons in the extended controls window will now have a drop
shadow.

This change also somewhat refactors the way the buttons in the sidebar
of the extended controls window work. Instead of setting the stylesheet
in ExtendedWindow::adjustTabs, we have styles defined in the main
stylesheet file for all three statet a sidebar button can be in, and
use a QButtonGroup to manage the state of the buttons instead of
managing it explicitly.

Change-Id: I6bb99b7cb86ba6501ef6ac2670f61bccdd50f350

--- a/android/skin/qt/extended-pages/finger-page.ui
+++ b/android/skin/qt/extended-pages/finger-page.ui
@@ -13,11 +13,11 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <widget class="QPushButton" name="finger_touchButton">
+  <widget class="RaisedMaterialButton" name="finger_touchButton">
    <property name="geometry">
     <rect>
-     <x>188</x>
-     <y>70</y>
+     <x>168</x>
+     <y>80</y>
      <width>132</width>
      <height>36</height>
     </rect>
@@ -85,6 +85,13 @@
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>RaisedMaterialButton</class>
+   <extends>QPushButton</extends>
+   <header>android/skin/qt/raised-material-button.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>finger_pickBox</tabstop>
   <tabstop>finger_touchButton</tabstop>
