--- a/android/skin/qt/extended-pages/telephony-page.ui
+++ b/android/skin/qt/extended-pages/telephony-page.ui
@@ -51,11 +51,11 @@
     <string notr="true">Title</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="tel_startEndButton">
+  <widget class="RaisedMaterialButton" name="tel_startEndButton">
    <property name="geometry">
     <rect>
-     <x>188</x>
-     <y>70</y>
+     <x>172</x>
+     <y>80</y>
      <width>128</width>
      <height>36</height>
     </rect>
@@ -123,11 +123,11 @@
     </property>
    </item>
   </widget>
-  <widget class="QPushButton" name="sms_sendButton">
+  <widget class="RaisedMaterialButton" name="sms_sendButton">
    <property name="geometry">
     <rect>
-     <x>176</x>
-     <y>270</y>
+     <x>160</x>
+     <y>280</y>
      <width>140</width>
      <height>36</height>
     </rect>
@@ -157,14 +157,14 @@
     <string>Tool</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="tel_holdCallButton">
+  <widget class="RaisedMaterialButton" name="tel_holdCallButton">
    <property name="enabled">
     <bool>false</bool>
    </property>
    <property name="geometry">
     <rect>
-     <x>64</x>
-     <y>70</y>
+     <x>40</x>
+     <y>80</y>
      <width>118</width>
      <height>36</height>
     </rect>
@@ -202,6 +202,13 @@
    </property>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>RaisedMaterialButton</class>
+   <extends>QPushButton</extends>
+   <header>android/skin/qt/raised-material-button.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>tel_numberBox</tabstop>
   <tabstop>tel_holdCallButton</tabstop>
