--- a/android/skin/qt/tools.ui
+++ b/android/skin/qt/tools.ui
@@ -69,6 +69,9 @@ color: #f0f0f0</string>
    <property name="uiCommand" stdset="0">
     <string>POWER</string>
    </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="volume_up_button">
    <property name="geometry">
@@ -103,6 +106,9 @@ color: #f0f0f0</string>
    </property>
    <property name="uiCommand" stdset="0">
     <string>VOLUME_UP</string>
+   </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="volume_down_button">
@@ -139,6 +145,9 @@ color: #f0f0f0</string>
    <property name="uiCommand" stdset="0">
     <string>VOLUME_DOWN</string>
    </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="prev_layout_button">
    <property name="geometry">
@@ -174,6 +183,9 @@ color: #f0f0f0</string>
    <property name="uiCommand" stdset="0">
     <string>ROTATE_LEFT</string>
    </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="back_button">
    <property name="geometry">
@@ -208,6 +220,9 @@ color: #f0f0f0</string>
    </property>
    <property name="uiCommand" stdset="0">
     <string>BACK</string>
+   </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="zoom_button">
@@ -247,6 +262,9 @@ color: #f0f0f0</string>
    <property name="uiCommand" stdset="0">
     <string>ENTER_ZOOM</string>
    </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="more_button">
    <property name="geometry">
@@ -278,6 +296,9 @@ color: #f0f0f0</string>
    </property>
    <property name="themeIconName" stdset="0">
     <string notr="true">more</string>
+   </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="scrShot_button">
@@ -314,6 +335,9 @@ color: #f0f0f0</string>
    <property name="uiCommand" stdset="0">
     <string>TAKE_SCREENSHOT</string>
    </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="home_button">
    <property name="geometry">
@@ -348,6 +372,9 @@ color: #f0f0f0</string>
    </property>
    <property name="uiCommand" stdset="0">
     <string>HOME</string>
+   </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="overview_button">
@@ -384,6 +411,9 @@ color: #f0f0f0</string>
    <property name="uiCommand" stdset="0">
     <string>OVERVIEW</string>
    </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="close_button">
    <property name="geometry">
@@ -416,6 +446,9 @@ color: #f0f0f0</string>
    <property name="themeIconName" stdset="0">
     <string notr="true">close</string>
    </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="minimize_button">
    <property name="geometry">
@@ -447,6 +480,9 @@ color: #f0f0f0</string>
    </property>
    <property name="themeIconName" stdset="0">
     <string notr="true">minimize</string>
+   </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
    </property>
   </widget>
   <widget class="QPushButton" name="next_layout_button">
@@ -482,6 +518,9 @@ color: #f0f0f0</string>
    </property>
    <property name="uiCommand" stdset="0">
     <string>ROTATE_RIGHT</string>
+   </property>
+   <property name="ToolWindowButton" stdset="0">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
