--- a/android/skin/qt/styles/stylesheet_template.css
+++ b/android/skin/qt/styles/stylesheet_template.css
@@ -68,6 +68,34 @@ QCheckBox::indicator:checked {
 QCheckBox::indicator:unchecked {
     image: url(:/%%PATH%%/check_no)
 }
+QPushButton:pressed[ToolWindowButton=true], QPushButton:checked[ToolWindowButton=true] {
+    border: none;
+    background: %%TAB_DARKENED_COLOR%%;
+    border-radius: 4px;
+}
+QPushButton[ColorGroup="MajorTab"] {
+    border: none;
+    text-align: left;
+    color: %%MAJOR_TAB_COLOR%%;
+    background: %%TAB_BKG_COLOR%%;
+}
+QPushButton[ColorGroup="MajorTabTitle"] {
+    border: none;
+    text-align: left;
+    color: %%MAJOR_TAB_COLOR%%;
+    background: %%TAB_BKG_COLOR%%;
+}
+QPushButton:pressed[ColorGroup="MajorTab"] {
+    border: none;
+    background: %%TAB_DARKENED_COLOR%%;
+}
+QPushButton:checked[ColorGroup="MajorTab"] {
+    border: none;
+    background: %%TAB_SELECTED_COLOR%%;
+}
+QPushButton:pressed[ColorGroup="Tool"] {
+    border: none;
+}
 QRadioButton::indicator:unchecked {
     image: url(:/%%PATH%%/radio_off);
     width: 24; height: 24;
@@ -95,7 +123,7 @@ QSlider::add-page:horizontal {
 QTableWidget {
     gridline-color: %%TAB_BKG_COLOR%%;
     background: %%TAB_BKG_COLOR%%;
-    border: 0px;
+    border: 1px solid %%EDIT_COLOR%%;
 }
 QTableView::item {
     padding-left: 16;
@@ -154,4 +182,11 @@ QTabBar::tab:!selected{
 QTabBar::tab:disabled {
     color: transparent;
     border-bottom: 2px solid transparent
+}
+RaisedMaterialButton {
+    border-radius: 2px;
+    color: %%TOOL_COLOR%%;
+}
+RaisedMaterialButton:pressed {
+    background: %%TAB_DARKENED_COLOR%%;
 }
