--- a/android/skin/qt/styles/stylesheet_template.css
+++ b/android/skin/qt/styles/stylesheet_template.css
@@ -44,6 +44,9 @@ QPlainTextEdit, QTextEdit, QLineEdit {
     border-top: 0px;
     border-bottom: 1px solid %%EDIT_COLOR%%;
 }
+QPlainTextEdit:disabled {
+    background: transparent
+}
 QLineEdit:focus {
     border-bottom: 2px solid %%TOOL_COLOR%%;
 }
