[UI] Fix background color of text boxes on the About page
Change-Id: I9e3ff86efb067e8addc6fc1665d95ec464a760f5

--- a/android/skin/qt/styles/stylesheet_template.css
+++ b/android/skin/qt/styles/stylesheet_template.css
@@ -44,6 +44,16 @@ QPlainTextEdit, QTextEdit, QLineEdit {
     border-top: 0px;
     border-bottom: 1px solid %%EDIT_COLOR%%;
 }
+QPlainTextEdit:disabled {
+    background: transparent
+}
+QLineEdit:focus {
+    border-bottom: 2px solid %%TOOL_COLOR%%;
+}
+QPlainTextEdit {
+    background: %%TAB_BKG_COLOR%%;
+    border: 1px solid %%EDIT_COLOR%%;
+}
 QCheckBox::indicator:checked[ColorGroup="Toggle"] {
     image: url(:/%%PATH%%/toggle_on);
     width: 36; height: 24;
