[UI] Fix font issue on Windows
Change-Id: If66c66e8977bd14f0ecdd72725a89fc09ea11fd3

--- a/android/skin/qt/styles/fonts_stylesheet_template.css
+++ b/android/skin/qt/styles/fonts_stylesheet_template.css
@@ -10,15 +10,15 @@
   GNU General Public License for more details.
  */
 
-QGroupBox { font-weight: regular; font-size: 10pt; }
+QGroupBox { font-weight: regular; font-size: %%FONT_MEDIUM%%; }
 QComboBox, QLineEdit, QPlainTextEdit, QPushButton, QRadioButton {
     font-weight: regular;
-    font-size: 12pt;
+    font-size: %%FONT_LARGE%%;
 }
 *[ColorGroup="Tool"] {
     font-weight: bold;
-    font-size: 10pt;
+    font-size: %%FONT_MEDIUM%%;
 }
 * {
-    font-size: 10pt;
+    font-size: %%FONT_MEDIUM%%;
 }
