[UI] Conditionally disable the D-Pad and fingerprint UIs
1) If the AVD does not have a hardware D-Pad, disable that
   UI control.

2) If the AVD's API level does not support fingerprint detection,
   disable that UI control. (Fingerprint was added in API 23.)

If I disable a control, I put a mask over the control, saying
why the control is disabled.

Change-Id: I033773956f60159f0ade7e1d714dd84f2ad938e4

--- a/android/skin/qt/extended-pages/dpad-page.ui
+++ b/android/skin/qt/extended-pages/dpad-page.ui
@@ -6,13 +6,56 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>622</width>
-    <height>580</height>
+    <width>620</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <widget class="QLabel" name="dpad_noDPad_mask">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>600</width>
+     <height>580</height>
+    </rect>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(128, 128, 128, 200)</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="dpad_noDPad_message">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>290</y>
+     <width>600</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Roboto</family>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(128, 128, 128, 0)</string>
+   </property>
+   <property name="text">
+    <string>This emulated device does not support the directional pad.</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
   <widget class="QPushButton" name="dpad_downButton">
    <property name="geometry">
     <rect>
