--- a/android/skin/qt/extended-pages/finger-page.ui
+++ b/android/skin/qt/extended-pages/finger-page.ui
@@ -6,13 +6,37 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>622</width>
-    <height>580</height>
+    <width>620</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <widget class="QLabel" name="finger_noFinger_mask">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>10</y>
+     <width>600</width>
+     <height>580</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Roboto</family>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(128, 128, 128, 200)</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
   <widget class="RaisedMaterialButton" name="finger_touchButton">
    <property name="geometry">
     <rect>
