[ui] Add a label to the box that holds the text message
On the Phone page, add the label "SMS message" to the box
that contains the text to be sent. (Almost every other field
or item has a label.)

Change-Id: I06525d9db0451ea5ca7e94c4c743f35eb2f973a2

--- a/android/skin/qt/extended-pages/telephony-page.ui
+++ b/android/skin/qt/extended-pages/telephony-page.ui
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>130</y>
+     <y>148</y>
      <width>280</width>
      <height>140</height>
     </rect>
@@ -127,7 +127,7 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>280</y>
+     <y>298</y>
      <width>140</width>
      <height>36</height>
     </rect>
@@ -199,6 +199,25 @@
    </property>
    <property name="ColorGroup" stdset="0">
     <string>Tool</string>
+   </property>
+  </widget>
+  <widget class="QGroupBox" name="tel_SmsGroup">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>130</y>
+     <width>141</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border: 0px;</string>
+   </property>
+   <property name="title">
+    <string>SMS message</string>
+   </property>
+   <property name="ColorGroup" stdset="0">
+    <string notr="true">Title</string>
    </property>
   </widget>
  </widget>
