[ui] Fix alignment of new label on SMS message box
The label was incroaching on the message box. Move the label to
the back to keep it in its place.

Change-Id: Idaf954e173c24fb1a9c012304c804b5a8257886f
(cherry picked from commit 06a970e45582a565b564d4bb51b5789715873ef2)

--- a/android/skin/qt/extended-pages/telephony-page.ui
+++ b/android/skin/qt/extended-pages/telephony-page.ui
@@ -220,6 +220,13 @@
     <string notr="true">Title</string>
    </property>
   </widget>
+  <zorder>tel_SmsGroup</zorder>
+  <zorder>sms_messageBox</zorder>
+  <zorder>tel_fromGroup</zorder>
+  <zorder>tel_startEndButton</zorder>
+  <zorder>tel_numberBox</zorder>
+  <zorder>sms_sendButton</zorder>
+  <zorder>tel_holdCallButton</zorder>
  </widget>
  <customwidgets>
   <customwidget>
